--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#32BD12</color>
+    <color name="colorPrimaryDark">#29A829</color>
+    <color name="colorAccent">#00D4FF</color>
     <color name="color_white">#FFF</color>
+
+    <color name="red">#FF0000</color>
+    <color name="neon_pink">#FF55D4</color>
+    <color name="royal_blue">#2650A5</color>
 </resources>
