--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.electrocraft.nirzo.pluse.view.LoginActivity">
+    tools:context="com.electrocraft.nirzo.pluse.view.activity.LoginActivity">
 
     <include
         android:id="@+id/my_toolbar"
