--- a/app/src/main/res/layout/activity_sign_up_email.xml
+++ b/app/src/main/res/layout/activity_sign_up_email.xml
@@ -4,88 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.electrocraft.nirzo.pluse.view.patient.SignUpEmailActivity">
+    tools:context=".view.activity.patient.SignUpEmailActivity">
 
     <include
         android:id="@+id/my_toolbar"
         layout="@layout/appbar_layout" />
-<ScrollView
-    android:layout_below="@+id/my_toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/scrollView2">
-    <RelativeLayout
-        android:layout_marginLeft="10dp"
+
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/editText3"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/my_toolbar">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp">
 
-            android:layout_marginTop="36dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
 
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText3"
-            android:layout_marginTop="14dp"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
+                android:layout_marginTop="36dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="@string/name" />
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editText4"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="22dp"
-            android:layout_toLeftOf="@+id/edt_phoneNo"
-            android:layout_toStartOf="@+id/edt_phoneNo" />
+            <EditText
+                android:id="@+id/editText4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/edit_name"
+                android:layout_marginTop="14dp"
+                android:ems="10"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/edt_phoneNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/spinner"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="21dp"
-            android:layout_marginRight="21dp"
-            android:ems="10"
-            android:inputType="phone" />
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText4"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="22dp"
+                android:layout_toLeftOf="@+id/edt_phoneNo"
+                android:layout_toStartOf="@+id/edt_phoneNo" />
 
-        <EditText
-            android:id="@+id/edt_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/edt_phoneNo"
-            android:layout_marginTop="14dp"
-            android:ems="10"
-            android:inputType="textPassword" />
-        <Button
-            android:text="Continue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/edt_password" />
+            <EditText
+                android:id="@+id/edt_phoneNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/spinner"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="21dp"
+                android:layout_marginRight="21dp"
+                android:ems="10"
+                android:hint="@string/phone_no"
+                android:inputType="phone" />
 
-    </RelativeLayout>
-</ScrollView>
+            <EditText
+                android:id="@+id/edt_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/edt_phoneNo"
+                android:layout_marginTop="14dp"
+                android:ems="10"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
 
+            <Button
+                android:onClick="onSignContinueClick"
+                android:id="@+id/pt_signUp_continue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/edt_password"
+                android:text="Continue" />
 
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
