--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    tools:context="com.electrocraft.nirzo.pluse.view.SplashScreen">
+    tools:context="com.electrocraft.nirzo.pluse.view.activity.SplashScreen">
 
     <ImageView
         android:id="@+id/imageView"
