--- a/app/src/main/res/layout/pt_app_bar_home.xml
+++ b/app/src/main/res/layout/pt_app_bar_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.electrocraft.nirzo.pluse.view.patient.Home">
+    tools:context=".view.activity.patient.Home">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
