--- a/app/src/main/res/layout/pt_content_home.xml
+++ b/app/src/main/res/layout/pt_content_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.electrocraft.nirzo.pluse.view.patient.Home"
+    tools:context=".view.activity.patient.Home"
     tools:showIn="@layout/pt_app_bar_home">
 
     <Button
