--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="neon_pink">#FF55D4</color>
     <color name="royal_blue">#2650A5</color>
     <color name="ao_green">#1C5C0C</color>
+    <color name="ao_green_1">#1C9800</color>
     <color name="dark_gray">#878787</color>
+    <color name="water_blue">#2471A3</color>
 </resources>
