--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,80 +22,274 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
-            <EditText
-                android:id="@+id/editText"
+            <RelativeLayout
+                android:id="@+id/rly_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="170dp"
-                android:ems="10"
-                android:hint="@string/phone_no"
-                android:inputType="phone" />
+                android:visibility="gone">
 
-            <EditText
-                android:id="@+id/editText2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/editText"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword" />
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/editText2"
-                android:layout_marginTop="41dp"
-                android:background="@drawable/login_ripple_effect"
-                android:onClick="onLoginClick"
-                android:text="Login"
-                android:textColor="@color/color_white" />
+                    android:ems="10"
+                    android:hint="@string/phone_no"
+                    android:inputType="phone" />
 
-            <RadioGroup
+                <EditText
+                    android:id="@+id/editText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/editText"
+                    android:layout_marginTop="10dp"
+                    android:ems="10"
+                    android:hint="@string/password"
+                    android:inputType="textPassword" />
+
+                <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/editText2"
+                    android:layout_marginTop="41dp"
+                    android:background="@drawable/ripple_effect_login"
+                    android:onClick="onLoginClick"
+                    android:text="Login"
+                    android:textColor="@color/color_white" />
+
+                <!-- <RadioGroup
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_above="@+id/editText2"
+                     android:layout_alignLeft="@+id/editText"
+                     android:layout_alignStart="@+id/editText"
+                     android:layout_marginBottom="72dp"
+                     android:layout_marginLeft="48dp"
+                     android:layout_marginStart="48dp">
+
+                     <RadioButton
+                         android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:text="@string/doctor" />
+
+                     <RadioButton
+                         android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:text="@string/patient" />
+                 </RadioGroup>-->
+
+                <!--          <Button
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_below="@+id/btn_login"
+                              android:layout_marginTop="20dp"
+                              android:background="@drawable/ripple_effect_reg"
+                              android:onClick="onRegistrationClick"
+                              android:text="@string/registration"
+                              android:textColor="@color/color_white" />-->
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/editText2"
+                    android:layout_marginTop="15dp"
+                    android:clickable="true"
+                    android:text="@string/forget_password"
+                    android:textColor="@color/royal_blue"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/editText2"
-                android:layout_alignLeft="@+id/editText"
-                android:layout_alignStart="@+id/editText"
-                android:layout_marginBottom="72dp"
-                android:layout_marginLeft="48dp"
-                android:layout_marginStart="48dp">
-
-                <RadioButton
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/doctor" />
-
-                <RadioButton
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/patient" />
-            </RadioGroup>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/btn_login"
-                android:onClick="onRegistrationClick"
-                android:text="@string/registration" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/editText2"
-                android:layout_marginTop="15dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:clickable="true"
-                android:text="@string/forget_password"
-                android:textColor="@color/royal_blue"
-                android:textStyle="bold" />
+                android:focusable="true"
+                android:onClick="onTextViewClick"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:text="LogIn"
+                    android:textColor="@color/water_blue"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="13dp"
+                    android:layout_marginRight="13dp"
+                    android:text="or" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Registration"
+                    android:textColor="@color/water_blue"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_sub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="22dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <RelativeLayout
+                    android:id="@+id/rl_sub_patient"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/iv_person"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/male" />
+
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toEndOf="@+id/iv_person"
+                        android:layout_toRightOf="@+id/iv_person"
+                        android:text="My pulse"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_desc"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_title"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toEndOf="@+id/iv_person"
+                        android:layout_toRightOf="@+id/iv_person"
+                        android:padding="5dp"
+                        android:text="Log in or create My Pluse account to get doctor's consultaion at your flexibility"
+                        android:textSize="12sp" />
+
+                    <Button
+                        android:id="@+id/btn_sub_login"
+                        android:layout_width="90dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/tv_desc"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginStart="12dp"
+                        android:drawableEnd="@drawable/ic_arrow_right_32px"
+                        android:drawableRight="@drawable/ic_arrow_right_32px"
+                        android:onClick="onSubLoginClick"
+                        android:text="login"
+                        android:textSize="10sp" />
+
+                    <Button
+                        android:id="@+id/btn_sub_reg"
+                        android:layout_width="130dp"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/tv_desc"
+                        android:layout_toEndOf="@+id/btn_sub_login"
+                        android:layout_toRightOf="@+id/btn_sub_login"
+                        android:drawableEnd="@drawable/ic_arrow_right_32px"
+                        android:drawableRight="@drawable/ic_arrow_right_32px"
+                        android:onClick="onRegistrationClick"
+                        android:text="Registration"
+                        android:textSize="10sp" />
+
+                </RelativeLayout>
+                <!--for doctor -->
+                <RelativeLayout
+                    android:id="@+id/rl_sub_doctor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:visibility="visible">
+
+                    <ImageView
+                        android:id="@+id/iv_doctor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_doctor" />
+
+                    <TextView
+                        android:id="@+id/tv_title_doc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toEndOf="@+id/iv_doctor"
+                        android:layout_toRightOf="@+id/iv_doctor"
+                        android:text="Doctor"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_desc_doc"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_title_doc"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toEndOf="@+id/iv_doctor"
+                        android:layout_toRightOf="@+id/iv_doctor"
+                        android:padding="5dp"
+                        android:text="Log in or create My Pluse account to get doctor's consultaion at your flexibility"
+                        android:textSize="12sp" />
+
+                    <Button
+                        android:id="@+id/btn_sub_login_doc"
+                        android:layout_width="90dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/tv_desc_doc"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginStart="12dp"
+                        android:drawableEnd="@drawable/ic_arrow_right_32px"
+                        android:drawableRight="@drawable/ic_arrow_right_32px"
+                        android:onClick="onSubLoginClick"
+                        android:text="login"
+                        android:textSize="10sp" />
+
+                    <Button
+                        android:id="@+id/btn_sub_reg_doc"
+                        android:layout_width="130dp"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/tv_desc_doc"
+                        android:layout_toEndOf="@+id/btn_sub_login_doc"
+                        android:layout_toRightOf="@+id/btn_sub_login_doc"
+                        android:drawableEnd="@drawable/ic_arrow_right_32px"
+                        android:drawableRight="@drawable/ic_arrow_right_32px"
+                        android:onClick="onRegistrationClick"
+                        android:text="Registration"
+                        android:textSize="10sp" />
+
+                </RelativeLayout>
+            </LinearLayout>
+
         </RelativeLayout>
     </ScrollView>
 
