--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,13 +150,13 @@
 
             <LinearLayout
                 android:id="@+id/ll_sub"
+                android:background="@color/gray_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_marginTop="22dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <RelativeLayout
                     android:id="@+id/rl_sub_patient"
@@ -167,17 +167,18 @@
                         android:id="@+id/iv_person"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/male" />
+                        android:src="@drawable/ic_male" />
 
                     <TextView
                         android:id="@+id/tv_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_toEndOf="@+id/iv_person"
                         android:layout_toRightOf="@+id/iv_person"
-                        android:text="My pulse"
-                        android:textSize="18sp"
+                        android:text="@string/my_pulse"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -186,16 +187,17 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_title"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_toEndOf="@+id/iv_person"
                         android:layout_toRightOf="@+id/iv_person"
                         android:padding="5dp"
-                        android:text="Log in or create My Pluse account to get doctor's consultaion at your flexibility"
+                        android:text="@string/patient_instruction"
                         android:textSize="12sp" />
 
                     <Button
                         android:id="@+id/btn_sub_login"
                         android:layout_width="90dp"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -211,14 +213,14 @@
                     <Button
                         android:id="@+id/btn_sub_reg"
                         android:layout_width="130dp"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:layout_below="@+id/tv_desc"
                         android:layout_toEndOf="@+id/btn_sub_login"
                         android:layout_toRightOf="@+id/btn_sub_login"
                         android:drawableEnd="@drawable/ic_arrow_right_32px"
                         android:drawableRight="@drawable/ic_arrow_right_32px"
                         android:onClick="onRegistrationClick"
-                        android:text="Registration"
+                        android:text="@string/reg"
                         android:textSize="10sp" />
 
                 </RelativeLayout>
@@ -240,6 +242,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_toEndOf="@+id/iv_doctor"
                         android:layout_toRightOf="@+id/iv_doctor"
                         android:text="Doctor"
@@ -252,16 +255,17 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_title_doc"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_toEndOf="@+id/iv_doctor"
                         android:layout_toRightOf="@+id/iv_doctor"
                         android:padding="5dp"
-                        android:text="Log in or create My Pluse account to get doctor's consultaion at your flexibility"
+                        android:text="@string/doc_instruction_login"
                         android:textSize="12sp" />
 
                     <Button
                         android:id="@+id/btn_sub_login_doc"
                         android:layout_width="90dp"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -277,7 +281,7 @@
                     <Button
                         android:id="@+id/btn_sub_reg_doc"
                         android:layout_width="130dp"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:layout_below="@+id/tv_desc_doc"
                         android:layout_toEndOf="@+id/btn_sub_login_doc"
                         android:layout_toRightOf="@+id/btn_sub_login_doc"
