--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,28 @@
 
     <color name="red">#FF0000</color>
     <color name="neon_pink">#FF55D4</color>
-    <color name="royal_blue">#2650A5</color>
+
     <color name="ao_green">#1C5C0C</color>
     <color name="ao_green_1">#1C9800</color>
+
+    <!-- gray scale -->
+    <color name="white">#FFFFFF</color>
+    <color name="gray_light">#DBDBDB</color>
+    <color name="gray">#939393</color>
     <color name="dark_gray">#878787</color>
+    <color name="black">#000</color>
+
+    <!--Blue-->
+    <color name="water_dark_blue">#4c00b6ff</color>
     <color name="water_blue">#2471A3</color>
+    <color name="royal_blue">#2650A5</color>
+
+    <color name="colorPrimary_1">#125688</color>
+    <color name="colorPrimaryDark_1">#125688</color>
+    <color name="colorAccent_1">#c8e8ff</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="windowBackground">#FFFFFF</color>
+    <color name="navigationBarColor">#000000</color>
+
+
 </resources>
