--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,19 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="tab_max_width">264dp</dimen>
+    <dimen name="tab_padding_bottom">16dp</dimen>
+    <dimen name="tab_label">14sp</dimen>
+    <dimen name="custom_tab_layout_height">72dp</dimen>
+    
+    <!-- margin for container -->
+    <dimen name="container_margin">10dp</dimen>
+    
+    <!--padding for edit Text -->
+    <dimen name="edit_text_padding">10dp</dimen>
+
+    <!--corner radius for spinner -->
+    <dimen name="corner_rad">5dp</dimen>
+
 </resources>
