Add RecyclerView & Dialog Fragments

--- a/app/src/main/res/layout/activity_sex_ndob_reg.xml
+++ b/app/src/main/res/layout/activity_sex_ndob_reg.xml
@@ -82,7 +82,7 @@
         android:inputType="date" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_pt_reg_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
