--- a/app/src/main/res/layout/frag_specialization.xml
+++ b/app/src/main/res/layout/frag_specialization.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingEnd="5dp"
     android:paddingStart="5dp"
     tools:context="com.electrocraft.nirzo.pluse.view.fragment.SpecializationFragment">
@@ -16,27 +17,41 @@
             android:layout_centerInParent="true"/>-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/border_spinner">
+        android:layout_height="match_parent">
 
-        <Spinner
-            android:id="@+id/sp_specializationCat"
+        <RelativeLayout
+            android:id="@+id/spinner_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:spinnerMode="dropdown" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/border_spinner">
 
-        <ImageView
+            <Spinner
+                android:id="@+id/sp_specializationCat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:spinnerMode="dropdown" />
 
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_spinner_indicator" />
+            <ImageView
+
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_spinner_indicator" />
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:scrollbars="vertical"
+            android:id="@+id/recyclerViewDocSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/spinner_layout"
+            android:layout_marginTop="20dp" />
     </RelativeLayout>
 
 
