--- a/app/src/main/res/layout/list_row_doctor_search.xml
+++ b/app/src/main/res/layout/list_row_doctor_search.xml
@@ -33,6 +33,7 @@
         android:text="TextView" />
 
     <Button
+        android:layout_marginTop="30dp"
         android:id="@+id/lr_btn_book"
         android:layout_width="80dp"
         android:layout_height="40dp"
@@ -51,6 +52,7 @@
         app:srcCompat="@drawable/ic_arrow_right_32px" />
 
     <ImageView
+        android:layout_marginTop="10dp"
         android:id="@+id/lr_iv_DocAvailableStatus"
         android:layout_width="@dimen/doc_availableStatus_width"
         android:layout_height="@dimen/doc_availableStatus_height"
@@ -66,4 +68,12 @@
      android:layout_below="@+id/lr_iv_DocAvailableStatus"
 
         android:text="TextView" />
+
+    <TextView
+        android:id="@+id/lr_tv_docRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/imageView3"
+        android:layout_below="@+id/lr_tv_DocName"
+        android:text="@string/_30" />
 </RelativeLayout>
