--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="170dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <EditText
                     android:id="@+id/editText"
@@ -84,15 +84,16 @@
                          android:text="@string/patient" />
                  </RadioGroup>-->
 
-                <!--          <Button
+                          <Button
+                              android:id="@+id/btn_reg"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_below="@+id/btn_login"
                               android:layout_marginTop="20dp"
                               android:background="@drawable/ripple_effect_reg"
                               android:onClick="onRegistrationClick"
-                              android:text="@string/registration"
-                              android:textColor="@color/color_white" />-->
+                              android:text="@string/reg"
+                              android:textColor="@color/color_white" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -156,7 +157,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="22dp"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/rl_sub_patient"
