--- a/app/src/main/res/layout/frag_describe_problem.xml
+++ b/app/src/main/res/layout/frag_describe_problem.xml
@@ -2,15 +2,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.electrocraft.nirzo.pluse.view.fragment.SpecializationFragment">
+    tools:context="com.electrocraft.nirzo.pluse.view.fragment.PtSpecializationFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Three"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/container_margin"
+        android:layout_marginStart="@dimen/container_margin">
+
+        <TextView
+            android:id="@+id/tv_lable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lbl_disease_symptom"
+            android:textSize="@dimen/label_txt_size"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/edtSymptomDes"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_below="@+id/tv_lable"
+            android:ems="10"
+            android:hint="@string/dot"
+            android:inputType="textMultiLine"
+            android:lines="15"
+            android:scrollbars="vertical" />
+
+        <Button
+            android:id="@+id/btn_symptom_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:text="Submit" />
+    </RelativeLayout>
 
 </FrameLayout>
