--- a/app/src/main/res/layout/frag_location_base.xml
+++ b/app/src/main/res/layout/frag_location_base.xml
@@ -2,15 +2,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.electrocraft.nirzo.pluse.view.fragment.SpecializationFragment">
+    tools:context="com.electrocraft.nirzo.pluse.view.fragment.PtSpecializationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Two"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+
+    <RelativeLayout
+        android:layout_marginStart="@dimen/container_margin"
+        android:layout_marginEnd="@dimen/container_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- TODO: Update blank fragment layout -->
+
+        <AutoCompleteTextView
+            android:id="@+id/actv_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:text="">
+
+            <requestFocus />
+        </AutoCompleteTextView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyVLocationSearch"
+            android:layout_below="@+id/actv_location"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </RelativeLayout>
 
 </FrameLayout>
