--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,4 +39,7 @@
     <dimen name="spinner_border_margin_top">10dp</dimen>
     <dimen name="spinner_margin_left">5dp</dimen>
     <dimen name="spinner_image_height">30dp</dimen>
+
+    <!--for Doctor Cover pic -->
+    <dimen name="doc_cover_pic_height">200dp</dimen>
 </resources>
