--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/appbar_layout" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/edtOtpInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,7 +19,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="172dp"
         android:ems="10"
-        android:hint="Enter Access Number"
+        android:hint="@string/enter_access_number"
         android:inputType="textPersonName" />
 
     <Button
@@ -27,13 +27,23 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/edtOtpInput"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/resend_otp_btn_shape"
         android:text="@string/resend_otp"
+        android:textColor="@color/color_white" />
+
+    <Button
+        android:id="@+id/btn_changeNo"
+        android:layout_toStartOf="@+id/btn_resendOTP"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/edtOtpInput"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/resend_otp_btn_shape"
+        android:text="@string/change_mobile_no"
         android:textColor="@color/color_white" />
 
     <Button
@@ -45,6 +55,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="86dp"
-        android:onClick="onOTPVerifyClick"
-        android:text="Verify N Continue " />
+
+        android:text="@string/verify_n_continue" />
 </RelativeLayout>
