--- a/app/src/main/res/layout/frag_specialization.xml
+++ b/app/src/main/res/layout/frag_specialization.xml
@@ -7,20 +7,13 @@
     android:paddingStart="5dp"
     tools:context="com.electrocraft.nirzo.pluse.view.fragment.PtSpecializationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <!--    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="One"
-            android:textSize="40dp"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"/>-->
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <!--Spinner-->
-        <RelativeLayout
+      <!--  <RelativeLayout
             android:id="@+id/spinner_layout"
             style="@style/spinner_border_style">
 
@@ -29,13 +22,22 @@
                 style="@style/spinner_style" />
 
             <ImageView style="@style/spinner_image_style" />
-        </RelativeLayout>
+        </RelativeLayout>-->
 
+        <AutoCompleteTextView
+            android:id="@+id/actv_specializationCat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:text="">
+
+            <requestFocus />
+        </AutoCompleteTextView>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyVDocSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/spinner_layout"
+            android:layout_below="@+id/actv_specializationCat"
             android:layout_marginTop="20dp"
             android:scrollbars="vertical" />
     </RelativeLayout>
