#build 010 (Doctor Today Appointment)

--- a/app/src/main/res/layout/doc_app_bar_home.xml
+++ b/app/src/main/res/layout/doc_app_bar_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context=".view.activity.doctor.DoctorHomeActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -25,7 +26,20 @@
 
 
     <FrameLayout
+        android:layout_below="@+id/appbar"
         android:id="@+id/doc_content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent" >
+
+
+    </FrameLayout>
+
+ <!--   experiment to the video
+    <Button
+        android:layout_below="@+id/doc_content_frame"
+        android:id="@+id/btn_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_behavior="" />-->
+</RelativeLayout>
